Squash bug in App component
Previously App would crash when user selected a class
before subclass information had been saved to state.
Now SpellsContainer checks if property exists before
trying to render

--- a/src/components/spell-cell/spell-cell.scss
+++ b/src/components/spell-cell/spell-cell.scss
@@ -8,4 +8,8 @@
   flex: 0 0 106px;
   overflow: hidden;
   margin: 1px 1px;
+  
+  &:hover {
+    border: 1px solid yellow;
+  }
 }
